<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GLOBAL -->
    <string name="app_name">Malware APK</string>

    <!-- FILE SYSTEM -->
    <string name="file_system_label_directory">Directory</string>
    <string name="file_system_label_file">File</string>
    <string name="file_system_label_common_directories">Common Directories</string>
    <string name="file_system_delete">Delete</string>
    <string name="file_system_create">Create</string>
    <string name="file_system_list">List</string>
    <string name="file_system_os_walk">OS Walk</string>
    <string name="file_system_read">Read</string>
    <string name="file_system_edit">Edit</string>
    <string name="file_system_path">Path</string>
    <string name="file_system_path_files">Files</string>
    <string name="file_system_path_external_files">External Files</string>
    <string name="file_system_path_shared_prefs">Shared Prefs</string>
    <string name="file_system_path_external_media">Removable Storage</string>

    <!-- PROCESS -->
    <string name="process_binary">Binary</string>
    <string name="process_command">Command</string>
    <string name="process_run">Run</string>
    <string name="process_cancel">Cancel</string>
    <string name="process_address">Remote Address</string>
    <string name="process_port">Port Number</string>
    <string name="process_connect">Connect</string>
    <string name="process_disconnect">Disconnect</string>

    <!-- ENUMERATION -->
    <string name="enumeration_label_activities">Activities</string>
    <string name="enumeration_label_providers">Content Providers</string>
    <string name="enumeration_label_receivers">Broadcast Receivers</string>
    <string name="enumeration_label_services">Services</string>
    <string name="enumeration_label_other">Other</string>
    <string name="enumeration_label_packages">Packages</string>
    <string name="enumeration_package_name">Package Name</string>
    <string name="enumeration_verbose_output">Verbose Output</string>
    <string name="enumeration_build_uris">Build URIs</string>
    <string name="enumeration_protected">Protected</string>
    <string name="enumeration_exported">Exported</string>
    <string name="enumeration_uris">URIs</string>
    <string name="enumeration_info">Info</string>
    <string name="enumeration_permissions">Permissions</string>
    <string name="enumeration_manifest">Manifest</string>
    <string name="enumeration_system_installed">System</string>
    <string name="enumeration_user_installed">User</string>

    <!-- INTENT -->
    <string name="intent_tab_proxy">Proxy Intent</string>
    <string name="intent_tab_target">Target Intent</string>
    <string name="intent_proxy_package_name">Proxy Intent Package Name</string>
    <string name="intent_proxy_class_name">Proxy Intent Class Name</string>
    <string name="intent_proxy_uri">Proxy Intent URI</string>
    <string name="intent_proxy_action">Proxy Intent Action</string>
    <string name="intent_proxy_type">Proxy Intent MIME Type</string>
    <string name="intent_target_package_name">Target Intent Package Name</string>
    <string name="intent_target_class_name">Target Intent Class Name</string>
    <string name="intent_target_uri">Target Intent URI</string>
    <string name="intent_target_action">Target Intent Action</string>
    <string name="intent_target_type">Target Intent MIME Type</string>
    <string name="intent_repeat">Repeat</string>
    <string name="intent_sleep">Sleep (ms)</string>
    <string name="intent_receiver_permission">Broadcast Receiver Permission</string>
    <string name="intent_send_broadcast">Send Broadcast</string>
    <string name="intent_start_activity">Start Activity</string>
    <string name="intent_bind_service">Bind Service</string>
    <string name="intent_start_service">Start Service</string>
    <string name="intent_wordlist_attack">Battering Ram Attack</string>
    <string name="intent_wordlist">Wordlist</string>
    <string name="intent_add_placeholder">Add Placeholder</string>
    <string name="intent_do_not_resolve_intents">Do Not Resolve Intents</string>
    <string name="intent_start_activity_for_result">Start Activity For Result</string>
    <string name="intent_flags_show">Flags</string>
    <string name="intent_extras_show">Extras</string>
    <string name="intent_extras_add">Add</string>
    <string name="intent_extras_clear">Clear</string>
    <string name="intent_extras_close">Close</string>

    <!-- INTENT FLAG -->
    <string name="intent_flag_label_proxy">P</string>
    <string name="intent_flag_label_target">T</string>

    <!-- INTENT EXTRA -->
    <string name="intent_extra_separator">Separator</string>
    <string name="intent_extra_key">Key</string>
    <string name="intent_extra_value">Value</string>
    <string name="intent_extra_file">Source File</string>
    <string name="intent_extra_projection">Projection</string>
    <string name="intent_extra_selection">Selection</string>
    <string name="intent_extra_delete">Delete</string>

    <!-- BROADCAST MONITOR -->
    <string name="broadcast_monitor_intent_action">Intent Action</string>
    <string name="broadcast_monitor_permission">Uses Permission</string>
    <string name="broadcast_monitor_start">Start Monitoring</string>
    <string name="broadcast_monitor_stop">Stop Monitoring</string>

    <!-- WEB -->
    <string name="web_asset_links_root_url">Asset Links Root URL</string>
    <string name="web_check_asset_links">Check Asset Links</string>
    <string name="web_url">URL</string>
    <string name="web_send_request">Send With OkHttp</string>
    <string name="web_package_name">Web Browser Package Name</string>
    <string name="web_open_web_browser">Open in Web Browser</string>
    <string name="web_open_webview">Open in WebView</string>
    <string name="web_requests_show">Deep Link Callback</string>
    <string name="web_requests_add">Add</string>
    <string name="web_requests_clear">Clear</string>
    <string name="web_requests_close">Close</string>
    <string name="web_requests_verbose_output">Output Requests</string>

    <!-- WEB REQUEST -->
    <string name="web_request_deep_link">Deep Link URI</string>
    <string name="web_request_url">URL</string>
    <string name="web_request_headers">Headers</string>
    <string name="web_request_boundary">Boundary</string>
    <string name="web_request_body">Body</string>
    <string name="web_request_extract">Extract</string>
    <string name="web_request_delete">Delete</string>

    <!-- WEB EXTRACTION -->
    <string name="web_extraction_key">Key</string>
    <string name="web_extraction_pattern">RegEx</string>

    <!-- WEB WEBVIEW -->
    <string name="web_webview_enable_java_script">WebView: Enable JavaScript</string>
    <string name="web_webview_close">Close</string>

    <!-- TASK HIJACKING -->
    <string name="task_hijacking_package_name">Package Name</string>
    <string name="task_hijacking_move_task_to_back">Move Task to Back</string>

    <!-- TAP HIJACKING -->
    <string name="tap_hijacking_label_overlay">Overlay</string>
    <string name="tap_hijacking_detect">Detect</string>
    <string name="tap_hijacking_create">Create</string>

    <!-- OVERLAY -->
    <string name="overlay_dummy_button">Dummy Button</string>
    <string name="overlay_dummy_text_input">Dummy Text Input</string>

    <!-- ACCESSIBILITY SERVICE -->
    <string name="accessibility_service_app_name">Malicious App Name</string>
    <string name="accessibility_service_app_description">Malicious App Description</string>

    <!-- ACCESSIBILITY MONITOR -->
    <string name="accessibility_monitor_package_name">Package Name</string>
    <string name="accessibility_monitor_ui_component">UI Component</string>
    <string name="accessibility_monitor_output_class_names">Output UI Component Class Names</string>
    <string name="accessibility_monitor_start">Start Monitoring</string>
    <string name="accessibility_monitor_stop">Stop Monitoring</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="notification_service_app_description">Malicious App Description</string>

    <!-- NOTIFICATION MONITOR -->
    <string name="notification_monitor_package_name">Package Name</string>
    <string name="notification_monitor_start">Start Monitoring</string>
    <string name="notification_monitor_stop">Stop Monitoring</string>
    <string name="notification_monitor_send">Send to Self</string>

    <!-- CLIPBOARD -->
    <string name="clipboard_text">Text</string>
    <string name="clipboard_set">Set</string>
    <string name="clipboard_dump">Dump</string>

    <!-- STATE MANAGER -->
    <string name="state_manager_name">Name</string>
    <string name="state_manager_reset">Reset</string>
    <string name="state_manager_upload">Upload</string>
    <string name="state_manager_save">Save</string>

    <!-- SETTINGS -->
    <string name="switch_settings_tooltip_reflection">When off, some features may not work or may show limited information.</string>
    <string name="switch_settings_tooltip_nested_vertical_scrolling">Applies only to multi‑line text input.\n\nWhen off, scroll horizontally first, then vertically.</string>
    <string name="switch_settings_tooltip_keep_all_offscreen_fragments">Keep all offscreen fragments in memory instead of destroying them.\n\nWhen off, keep only 2 offscreen fragments on each side of the onscreen fragment.</string>
    <string name="settings_biometric_unlock">Biometric Unlock</string>
    <string name="settings_reflection">Reflection</string>
    <string name="settings_wrap_log_text">Wrap Log Text</string>
    <string name="switch_settings_nested_vertical_scrolling">Nested Vertical Scrolling</string>
    <string name="settings_keep_all_offscreen_fragments">Keep All Offscreen Fragments</string>
    <string name="settings_compact_navigation_bar">Compact Navigation Bar</string>

    <!-- LOG -->
    <string name="log_wrap">Wrap</string>
    <string name="log_unwrap">Unwrap</string>
    <string name="log_save">Save</string>
    <string name="log_cancel">Cancel</string>
    <string name="log_clear">Clear</string>

</resources>