<?xml version="1.0" encoding="utf-8"?>
<com.kira.malware.components.ScrollViewComponent xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Malware.ScrollView.Fragment"
    tools:context=".fragments.FileSystemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.kira.malware.components.EditTextComponent
            android:id="@+id/text_input_file_system_path"
            style="@style/Widget.Malware.EditText"
            android:hint="@string/file_system_path" />

        <LinearLayout
            android:id="@+id/linear_layout_file_system_crud_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/global_layout_margin_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Widget.Malware.EditText.Label"
                    android:hint="@string/file_system_label_directory" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_file_system_directory_delete"
                    style="@style/Widget.Malware.Button"
                    android:text="@string/file_system_delete" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_file_system_directory_create"
                    style="@style/Widget.Malware.Button"
                    android:text="@string/file_system_create" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_file_system_directory_list"
                    style="@style/Widget.Malware.Button"
                    android:text="@string/file_system_list" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_file_system_directory_os_walk"
                    style="@style/Widget.Malware.Button"
                    android:text="@string/file_system_os_walk" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Widget.Malware.EditText.Label"
                    android:hint="@string/file_system_label_file" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_file_system_file_delete"
                    style="@style/Widget.Malware.Button"
                    android:text="@string/file_system_delete" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_file_system_file_create"
                    style="@style/Widget.Malware.Button"
                    android:text="@string/file_system_create" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_file_system_file_read"
                    style="@style/Widget.Malware.Button"
                    android:text="@string/file_system_read" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_file_system_file_edit"
                    style="@style/Widget.Malware.Button"
                    android:text="@string/file_system_edit" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Widget.Malware.EditText.Label"
            android:hint="@string/file_system_label_common_paths" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_file_system_path_files"
                style="@style/Widget.Malware.Button"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/global_layout_margin_horizontal"
                android:layout_weight="1"
                android:text="@string/file_system_path_files" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_file_system_path_external_files"
                style="@style/Widget.Malware.Button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/file_system_path_external_files" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_file_system_path_shared_prefs"
                style="@style/Widget.Malware.Button"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/global_layout_margin_horizontal"
                android:layout_weight="1"
                android:text="@string/file_system_path_shared_prefs" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_file_system_path_external_media"
                style="@style/Widget.Malware.Button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/file_system_path_external_media" />

        </LinearLayout>

        <include
            layout="@layout/layout_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</com.kira.malware.components.ScrollViewComponent>