<?xml version="1.0" encoding="utf-8"?>
<com.kira.malware.components.ScrollViewComponent xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Malware.ScrollView.Fragment"
    tools:context=".fragments.ProcessFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.kira.malware.components.EditTextComponent
            android:id="@+id/text_input_process_binary"
            style="@style/Widget.Malware.EditText"
            android:hint="@string/process_binary" />

        <com.kira.malware.components.EditTextComponent
            android:id="@+id/text_input_process_command"
            style="@style/Widget.Malware.EditText.MultiLine"
            android:hint="@string/process_command"
            android:maxLines="10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_process_run"
            style="@style/Widget.Malware.Button"
            android:text="@string/process_run" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <com.kira.malware.components.EditTextComponent
                android:id="@+id/text_input_process_address"
                style="@style/Widget.Malware.EditText"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/global_layout_margin_horizontal"
                android:layout_weight="0.60"
                android:hint="@string/process_address" />

            <com.kira.malware.components.EditTextComponent
                android:id="@+id/text_input_process_port"
                style="@style/Widget.Malware.EditText"
                android:layout_width="0dp"
                android:layout_weight="0.40"
                android:hint="@string/process_port"
                android:inputType="number" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_process_connect"
            style="@style/Widget.Malware.Button"
            android:text="@string/process_connect" />

        <include
            layout="@layout/layout_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</com.kira.malware.components.ScrollViewComponent>