<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_flipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.IntentFragment">

    <com.kira.malware.components.ScrollViewComponent style="@style/Widget.Malware.ScrollView.Fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout_sub_tabs"
                style="@style/Widget.Malware.TabLayout"
                android:paddingBottom="@dimen/global_padding_vertical"
                app:tabMode="scrollable"
                app:tabTextAppearance="@style/Widget.Malware.TabText" />

            <LinearLayout
                android:id="@+id/linear_layout_intent_proxy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_proxy_package_name"
                    style="@style/Widget.Malware.EditText"
                    android:hint="@string/intent_proxy_package_name" />

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_proxy_class_name"
                    style="@style/Widget.Malware.EditText"
                    android:hint="@string/intent_proxy_class_name" />

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_proxy_uri"
                    style="@style/Widget.Malware.EditText"
                    android:hint="@string/intent_proxy_uri" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.kira.malware.components.EditTextComponent
                        android:id="@+id/text_input_intent_proxy_action"
                        style="@style/Widget.Malware.EditText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:hint="@string/intent_proxy_action" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Malware.DropdownMenu"
                        android:layout_width="32dp"
                        android:layout_height="27dp"
                        android:paddingStart="3dp"
                        android:paddingEnd="-3dp"
                        app:endIconDrawable="@android:color/transparent"
                        app:startIconDrawable="@drawable/ic_autofill"
                        app:startIconTint="@color/global_text_view">

                        <AutoCompleteTextView
                            android:id="@+id/dropdown_intent_proxy_action_autofill"
                            style="@style/Widget.Malware.DropdownSelectedText"
                            android:background="@android:color/transparent"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_proxy_type"
                    style="@style/Widget.Malware.EditText"
                    android:hint="@string/intent_proxy_type" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_intent_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_target_package_name"
                    style="@style/Widget.Malware.EditText"
                    android:hint="@string/intent_target_package_name" />

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_target_class_name"
                    style="@style/Widget.Malware.EditText"
                    android:hint="@string/intent_target_class_name" />

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_target_uri"
                    style="@style/Widget.Malware.EditText"
                    android:hint="@string/intent_target_uri" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.kira.malware.components.EditTextComponent
                        android:id="@+id/text_input_intent_target_action"
                        style="@style/Widget.Malware.EditText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:hint="@string/intent_target_action" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Malware.DropdownMenu"
                        android:layout_width="32dp"
                        android:layout_height="27dp"
                        android:paddingStart="3dp"
                        android:paddingEnd="-3dp"
                        app:endIconDrawable="@android:color/transparent"
                        app:startIconDrawable="@drawable/ic_autofill"
                        app:startIconTint="@color/global_text_view">

                        <AutoCompleteTextView
                            android:id="@+id/dropdown_intent_target_action_autofill"
                            style="@style/Widget.Malware.DropdownSelectedText"
                            android:background="@android:color/transparent"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_target_type"
                    style="@style/Widget.Malware.EditText"
                    android:hint="@string/intent_target_type" />

            </LinearLayout>

            <HorizontalScrollView style="@style/Widget.Malware.HorizontalScrollView">

                <LinearLayout
                    android:id="@+id/linear_layout_intent_flags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_intent_flags_show"
                    style="@style/Widget.Malware.Button"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/global_layout_margin_horizontal"
                    android:layout_weight="1"
                    android:text="@string/intent_flags_show"
                    app:icon="@drawable/ic_show"
                    app:iconGravity="textStart"
                    app:iconSize="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_intent_extras_show"
                    style="@style/Widget.Malware.Button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/intent_extras_show" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_repeat"
                    style="@style/Widget.Malware.EditText"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/global_layout_margin_horizontal"
                    android:layout_weight="1"
                    android:hint="@string/intent_repeat"
                    android:inputType="number" />

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_sleep"
                    style="@style/Widget.Malware.EditText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/intent_sleep"
                    android:inputType="number" />

            </LinearLayout>

            <com.kira.malware.components.EditTextComponent
                android:id="@+id/text_input_intent_receiver_permission"
                style="@style/Widget.Malware.EditText"
                android:hint="@string/intent_receiver_permission" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_intent_send_broadcast"
                    style="@style/Widget.Malware.Button"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/global_layout_margin_horizontal"
                    android:layout_weight="1"
                    android:text="@string/intent_send_broadcast" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_intent_start_activity"
                    style="@style/Widget.Malware.Button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/intent_start_activity" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_intent_bind_service"
                    style="@style/Widget.Malware.Button"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/global_layout_margin_horizontal"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/intent_bind_service" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_intent_start_service"
                    style="@style/Widget.Malware.Button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/intent_start_service" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/global_layout_margin_horizontal"
                    android:layout_weight="1">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/checkbox_intent_wordlist_attack"
                        style="@style/Widget.Malware.CheckBox"
                        android:text="@string/intent_wordlist_attack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/checkbox_intent_do_not_resolve_intents"
                        style="@style/Widget.Malware.CheckBox"
                        android:text="@string/intent_do_not_resolve_intents" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/global_layout_margin_horizontal"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/checkbox_intent_start_activity_for_result"
                        style="@style/Widget.Malware.CheckBox"
                        android:text="@string/intent_start_activity_for_result" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_intent_wordlist_attack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.kira.malware.components.EditTextComponent
                    android:id="@+id/text_input_intent_wordlist"
                    style="@style/Widget.Malware.EditText"
                    android:hint="@string/intent_wordlist" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_intent_add_placeholder"
                    style="@style/Widget.Malware.Button"
                    android:text="@string/intent_add_placeholder" />

            </LinearLayout>

            <include
                layout="@layout/layout_log"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </com.kira.malware.components.ScrollViewComponent>

    <include
        layout="@layout/layout_intent_extras"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</ViewFlipper>