<?xml version="1.0" encoding="utf-8"?>
<com.kira.malware.components.ScrollViewComponent xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Malware.ScrollView.Fragment"
    tools:context=".fragments.AccessibilityMonitorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.kira.malware.components.EditTextComponent
            android:id="@+id/text_input_accessibility_monitor_package_name"
            style="@style/Widget.Malware.EditText"
            android:hint="@string/accessibility_monitor_package_name" />

        <com.kira.malware.components.EditTextComponent
            android:id="@+id/text_input_accessibility_monitor_ui_component"
            style="@style/Widget.Malware.EditText"
            android:hint="@string/accessibility_monitor_ui_component" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_accessibility_monitor_output_class_names"
            style="@style/Widget.Malware.CheckBox"
            android:text="@string/accessibility_monitor_output_class_names" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_accessibility_monitor_start"
            style="@style/Widget.Malware.Button"
            android:text="@string/accessibility_monitor_start" />

        <include
            layout="@layout/layout_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</com.kira.malware.components.ScrollViewComponent>